# mlops_project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  predictions.csv  pyproject.toml  requirements.txt  tasks.py  todo_list.md
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: linting.yaml  tests.yaml
configs/: __init__.py  cloudbuild.yaml  config.yaml  data.yaml  eval.yaml  logging.yaml  model.yaml  train.yaml  vertex_preprocess_config.yaml  vertex_train_config.yaml
data/: .gitignore  test.csv  test.csv.dvc  test_data.dvc  train_data.dvc
dockerfiles/: .dockerignore  api.dockerfile  evaluate.dockerfile  train.dockerfile  vertex_preprocess.dockerfile  vertex_train.dockerfile
docs/: API_DEPLOYMENT.md  GCP_VERTEX_AI_SETUP.md  GCP_WORKFLOW.md  mkdocs.yaml
docs/source/: index.md
notebooks/: look_at_data.ipynb
reports/: README.md  report.py
scripts/: __init__.py
src/mlops_project/: api.py  data.py  evaluate.py  inference.py  model.py  preprocess.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_evaluate.py  test_integration_predict.py  test_model.py  test_preprocess.py  test_train.py
